--- a/speeding/Info.plist
+++ b/speeding/Info.plist
@@ -22,6 +22,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>We need your location to calculate your speed</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We need your location to calculate your speed</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
