--- a/speeding/Info.plist
+++ b/speeding/Info.plist
@@ -23,9 +23,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>We need your location to calculate your speed</string>
+	<string>We need your location to calculate and log your speed</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>We need your location to calculate your speed</string>
+	<string>We need your location to calculate and log your speed</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
